package com.example.services;

import com.example.constants.ServiceDelays;
import com.example.model.TransactionRequest;
import com.example.model.ValidationResult;
import com.example.utils.DemoUtil;
import jakarta.enterprise.context.ApplicationScoped;

@ApplicationScoped
public class MerchantValidationService implements ValidationService {

    @Override
    public ValidationResult validate(TransactionRequest request) {
        DemoUtil.simulateNetworkDelay(ServiceDelays.MERCHANT_VALIDATION_DELAY);

        String merchant = request.merchant();

        // Simple check: fail if merchant contains "BLOCKED" for demo purposes
        if (merchant.toUpperCase().contains("BLOCKED")) {
            return ValidationResult.failure("Merchant Validation: Merchant is blocked");
        }
        return ValidationResult.success();
    }

}
